# jmo-security-repo

./: .coveragerc  .dockerignore  .env.example  .gitignore  .guardrails-allowlist  .hadolint.yaml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .markdownlintrc  .mcp.json.example  .pre-commit-config.yaml  .readthedocs.yaml  .trufflehog-exclude.txt  .yamllint.yaml  ACTION_PLAN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE.md.new  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_SUMMARY.md  DOCKER_HUB_README.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  Dockerfile  Dockerfile.alpine  Dockerfile.balanced  Dockerfile.bare  Dockerfile.deep  Dockerfile.fast  Dockerfile.slim  EMAIL_SYSTEM_COMPLETE.md  IMPROVEMENTS.md  Makefile  PR_SUMMARY.md  QUICKSTART.md  QUICK_START_EMAIL_SYSTEM.md  (+47 more)
.backups/: MONETIZATION_STRATEGY.md
.claude/: mcp.json
.claude/agents/: code-quality-auditor.md  codebase-explorer.md  coverage-gap-finder.md  dependency-analyzer.md  doc-sync-checker.md  release-readiness.md  security-auditor.md
.claude/ralph-cli-testing/: AGENTS.md  IMPLEMENTATION_PLAN.md  ISSUE_OPA_DETECTION.md  PROMPT_build.md  PROMPT_test.md  loop.ps1
.claude/rules/: adapters.rules.md  docker.rules.md  python-safety.rules.md  release.rules.md  reporters.rules.md  testing.cross-platform.rules.md  testing.rules.md
.claude/skills/: INDEX.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md
.github/workflows/: automated-release.yml  backfill-github-releases.yml  ci.yml  deps-compile-check.yml  docker-build.yml  docker-validation.yml  e2e-comprehensive-tests.yml  homebrew-bump-formula.yml  labeler.yml  lint-full.yml  maintenance.yml  nightly-tests.yml  performance-regression.yml  release.yml  repo-completeness-check.yml  scheduled-tests.yml  scheduled.yml  tests.yml  version-check.yml  weekly-tool-update.yml  winget-releaser.yml
.jmo/memory/: README.md  schemas.json
.mcp-skills/: EXAMPLE_USAGE.md  README.md  adapter-pattern-analyzer.py  quick-coverage.py  test-pattern-matcher.py
conductor/: index.md  tech-stack.md  tracks.md
conductor/code_styleguides/: general.md  html-css.md  javascript.md  python.md  typescript.md
dev-only/plans/: README.md
docs/: API_REFERENCE.md  BADGE_AUTOMATION.md  BUILD_OPTIMIZATION.md  CAPTCHA.md  CI_TROUBLESHOOTING.md  CLI_REFERENCE.md  COMPLETENESS_ANALYZER_CI_INTEGRATION.md  COMPLIANCE_FRAMEWORK_ANALYSIS.md  COMPLIANCE_INTEGRATION_TEST_RESULTS.md  CONTEXT7_USAGE.md  CUSTOM_DOMAIN_AND_CAPTCHA_GUIDE.md  DEEP_PROFILE_TEST_RESULTS.md  DEEP_PROFILE_TOOLS_STATUS.md  DEPENDENCY_MANAGEMENT.md  DIFF_GUIDE.md  DOCKER_IMPLEMENTATION.md  DOCKER_PUSH_INSTRUCTIONS.md  DOCKER_README.md  DOCKER_VARIANTS_MASTER.md  EMAIL_TELEMETRY_SETUP.md  EMAIL_TESTING_GUIDE.md  FAQ.md  GIT_WORKFLOW.md  HISTORY_GUIDE.md  MANUAL_INSTALLATION.md  MANUAL_TESTING_CHECKLIST.md  MCP_QUICK_REFERENCE.md  MCP_SETUP.md  MONITORING_SETUP.md  NEWSLETTER_CONTENT.md  OUTPUT_FORMATS.md  PLATFORM_NOTES.md  PLATFORM_SPECIFIC.md  POLICY_AS_CODE.md  PRE_COMMIT_HOOKS.md  PRIVACY.html  PROFILES_AND_TOOLS.md  QUICK_REFERENCE.md  RELEASE.md  RESULTS_GUIDE.md  (+21 more)
docs/archive/: DOCKER_IMPLEMENTATION.md  DOCKER_QUICKSTART_BEGINNERS.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_LOG_10-14-25.md  ISSUE_29_UPDATE.md  README.md  WIZARD_COMPLETION_SUMMARY.md  WIZARD_IMPLEMENTATION.md  follow-up-questions-answers.md
docs/brand/: IDENTITY.md  README.md  tokens.css  tokens.py
docs/examples/: .gitlab-ci.yml  Jenkinsfile  README.md  attestation-workflows.md  ci-cd-trends.md  custom-policy-examples.md  diff-workflows.md  docker-compose.diff.yml  docker-compose.trends.yml  github-actions-diff.yml  github-actions-docker.yml  gitlab-ci-diff.yml  monorepo-examples.md  policy-workflows.md  scan_from_tsv.md  scheduled-scan-github-actions.yml  scheduled-scan-gitlab-ci.yml  scheduled-scan-local-cron.sh  scheduled-scan-multi-target.yml  slack-notifications.md  wizard-examples.md
docs/integrations/: CLAUDE_CODE.md  GITHUB_COPILOT.md
docs/internal/: BADGE_AUTOMATION.md  BUILD_OPTIMIZATION.md  DEPENDENCY_MANAGEMENT.md  MANUAL_TESTING_CHECKLIST.md  PRE_COMMIT_HOOKS.md  README.md  TESTING_MATRIX.md
docs/plans/: README.md
docs/schemas/: common_finding.v1.json  policy_metadata.json
docs/screenshots/: README.md
hooks/: pre-push
jmo_security.egg-info/: PKG-INFO  SOURCES.txt
packaging/: AUTOMATION_SETUP.md  PRE_RELEASE_CHECKLIST.md  README.md  TESTING.md  TOOL_INSTALLATION.md  WINDOWS_COMPATIBILITY.md
packaging/homebrew/: jmo-security.rb
packaging/scripts/: install-tools-homebrew.sh  install-tools-linux.sh  install-tools-windows.ps1  jmo-docker  jmo-docker.cmd  jmo-docker.ps1
packaging/windows/: build_installer.py  file_version_info.txt  installer.nsi  jmo-security.spec
paperclip/: AGENT_NEWSLETTER_WORKFLOW.md
policies/: README.md
policies/builtin/: hipaa-compliance.rego  owasp-top-10.rego  pci-dss.rego  production-hardening.rego  zero-secrets.rego
policies/examples/: .gitkeep
policies/tests/: .gitkeep
results-balanced/individual-repos/: checkov-cicd.json
results-diff-baseline/individual-repos/: hadolint.json
results-diff-baseline/summaries/: PCI_DSS_COMPLIANCE.md  SUMMARY.md  findings.json
results-diff-current/individual-repos/: semgrep.json  syft.json  trufflehog.json
results-diff-current/summaries/: POLICY_REPORT.md  attack-navigator.json  findings.yaml
results-final/individual-repos/: checkov-cicd.json  semgrep.json  trufflehog.json
results-final/summaries/: COMPLIANCE_SUMMARY.md  POLICY_SUMMARY.md  dashboard.html  findings.json  findings.yaml  policy_results.json
samples/: README.md  images.txt  repos.txt  web-urls.txt
samples/gitleaks/: gitleaks-developer-bootcamp-2024.json
samples/iac-files/: cloudformation-s3.yaml  kubernetes-deployment.yaml  (+1 more)
scripts/: populate_targets.sh  run_audit_and_report.sh
tests/: conftest.py
(+884 files in other folders)
