[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jmo-security"
version = "1.0.0"
description = "JMo Security Audit Suite (terminal-first, multi-tool, unified outputs, multi-target scanning)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "James Moceri", email = "general@jmogaming.com" }]
keywords = [
    "security", "scanning", "SAST", "SBOM", "secrets-detection",
    "compliance", "OWASP", "CWE", "DevSecOps", "cybersecurity"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]
dependencies = [
    "PyYAML>=6.0",  # Required for config file loading (jmo.yml)
    "croniter>=1.0",  # Required for schedule management (v0.9.0+)
    "requests>=2.31.0",  # Required for EPSS/KEV integration (v0.9.0+)
    "tomli>=2.0.0; python_version<'3.11'",  # Required for pyproject.toml reading (v1.0.0+)
    "rapidfuzz>=3.0.0",  # Required for cross-tool deduplication fuzzy matching (v1.0.0+)
    "rich>=13.0",  # Required for trend analysis console formatting (v1.0.0+)
]

[project.urls]
Homepage = "https://jmotools.com"
Documentation = "https://docs.jmotools.com"
Repository = "https://github.com/jimmy058910/jmo-security-repo"
"Bug Tracker" = "https://github.com/jimmy058910/jmo-security-repo/issues"
LinkedIn = "https://linkedin.com/in/jimmy-moceri"

[project.optional-dependencies]
reporting = ["jsonschema>=4.0"]  # PyYAML moved to main dependencies
email = ["resend>=2.0"]
mcp = ["mcp[cli]>=1.0.0"]  # MCP server for AI-powered remediation (Feature #2, v1.0.0)
attestation = ["sigstore>=2.0.0", "cryptography>=41.0.0"]  # SLSA attestation (Feature #6, v1.0.0)

[project.scripts]
jmo = "scripts.cli.jmo:main"
# jmotools removed in v0.9.0 - all commands consolidated into 'jmo'

[tool.setuptools]
include-package-data = true

# Ensure LICENSE files are included in the sdist/wheel
license-files = ["LICENSE", "LICENSE-MIT", "LICENSE-APACHE"]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, gradually increase
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

# Gradually increase strictness for core modules
[[tool.mypy.overrides]]
module = "scripts.core.common_finding"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "scripts.core.config"
disallow_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as performance benchmarks (deselect with '-m \"not benchmark\"')",
    "smoke: marks tests as smoke tests for released packages (deselect with '-m \"not smoke\"')",
]

[tool.coverage.run]
omit = [
    # Data-only files with no executable logic
    "scripts/core/compliance_frameworks.py",  # Pure data structure (compliance mappings)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
# Exclude test fixtures that are intentionally vulnerable
extend-exclude = ["tests/e2e/fixtures/python/vulnerable_app.py"]
